--- a/html/03_hipervincles/act2.html
+++ b/html/03_hipervincles/act2.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <h1>Restaurante chino</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui nesciunt necessitatibus ullam facere itaque debitis aliquam laudantium, cumque culpa ad praesentium fugit inventore dicta rem, accusantium, maiores provident laborum voluptatum?</p>
-        
-       <h2>¿Quienes somos?</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugiat, odit laboriosam ipsam enim minus commodi ex nisi accusantium voluptates quod quaerat a saepe tempora similique voluptatum ad totam placeat?</p>
+       <a href="#">Volver a inicio</a>
+    <h1>Menús</h1>
+
+    <h2>Del día</h2>
+     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, quos numquam magni nesciunt molestiae et necessitatibus consequuntur cum repellendus, amet similique nam quod aliquid quae deserunt commodi excepturi vero unde!</p>
+
+    <a href="#">Ver imagen</a>
+    <h2>Familia</h2>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore adipisci unde, est, ut quisquam obcaecati reprehenderit aspernatur animi pariatur maxime inventore atque aliquid. Officiis cumque voluptas perspiciatis odit optio quisquam?</p>
+    <a href="#">Ver imagen</a>
+
 </head>
 <body>
     
