--- a/html/03_hipervincles/act3.html
+++ b/html/03_hipervincles/act3.html
@@ -11,10 +11,10 @@
 
    <h2>Índice</h2>  
   
-        <a href="#acto1">Primer acto</a>
-        <a href="#acto2">Segundo acto</a>
-        <a href="#acto3">Tercer acto</a>
-        <a href="#fin">Fin de la obra</a>
+        <li><a href="#acto1">Primer acto</a></li>
+        <li><a href="#acto2">Segundo acto</a></li>
+        <li><a href="#acto3">Tercer acto</a></li>
+        <li><a href="#fin">Fin de la obra</a></li>
    
 
 
