--- a/html/04_Listas/act2.html
+++ b/html/04_Listas/act2.html
@@ -3,18 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sublistas</title>
+    <title>Series épicas</title>
 </head>
 <body>
-    <ol>
-    <li>Precalentar horno</li>
-    <li>Mezclar la Harina con agua</li>
+    <h1>Series épicas</h1>
     <ul>
-        <li>No olvidemos remover bien</li>
-        <li> Cuidado con los grumos</li>
+        <li>Dibujos animados
+            <ul>
+                <li>Simpsons</li>
+                <li>Futurama</li>
+                <li>Desencanto</li>
+            </ul>
+        </li>
+        <li>Drama
+            <ul>
+                <li>Breaking Bad</li>
+                <li>Chernobyl</li>
+                <li>Mad Men</li>
+            </ul>
+        </li>
+        <li>Ciencia ficción
+            <ul>
+                <li>Expediente X</li>
+                <li>Star Trek</li>
+                <li>Stargate</li>
+            </ul>
+        </li>
+        <li>Comedia
+            <ul>
+                <li>30 Rock</li>
+                <li>Seinfeld</li>
+                <li>Friends</li>
+            </ul>
+        </li>
     </ul>
-    <li>Dejar que repose</li>
-</ol>
-
 </body>
 </html></p>
