--- a/html/03_hipervincles/act3.html
+++ b/html/03_hipervincles/act3.html
@@ -46,7 +46,9 @@
           <article class="group post">
         <h1 class="title">Guión obra de teatro</h1>
         <div class="breadcumb"><a href="https://www.ejemplode.com" title="Inicio">Inicio</a> » <a href="/11-escritos/" rel="bookmark">Escritos</a> » Guión obra de teatro
-        <p align="center">PRIMER ACTO</p>
+        <p id="acto1">primer acto</p>
+
+            <p align="center">PRIMER ACTO</p>
         <p>El baño del departamento de Mónica. Un baño muy bien amueblado y con acabados lujosos. La puerta está del lado izquierdo. Azulejos de color amarillo pastel con figurillas que se engarzan entre sí. El lavamanos tiene dos puertas en la parte inferior, un espejo encima que toca el techo, al lado derecho un retrete y a la diestra de este se encuentra la tina de hidromasaje. Tres cuadros decorativos. Jabones de colores y una maceta.</p>
         <p align="center">ESCENA I</p>
         <p>Mónica entra al baño, trae en la mano un teléfono inalámbrico, cierra la puerta y se mira en el espejo de forma pensativa y como reconociéndose a sí misma, mirándose extrañada como si su reflejo no fuera el de ella misma. Se toca la cara.</p>
@@ -68,6 +70,9 @@
         <p>Se des abrocha desesperadamente uno a uno los botones del pantalón despojándose de éste y queda únicamente en calzones.</p>
         <p><strong>Mónica: ¡</strong>Prosigue por favor! No te detengas.</p>
         <p>Fuera los calzones. Mónica queda completamente desnuda y continúa extasiada. Comienza a masturbarse con la mano derecha e interrumpe la acción para acostarse dentro de la bañera. Mónica se queda recostada en la bañera haciendo gestos de placer y acariciándose por completo con ambas manos.</p>
+      
+          <p id="acto2">segundo acto</p>
+
         <p align="center">SEGUNDO ACTO</p>
         <p>Mónica y Mariana en el departamento de soltera de ésta última, diez años atrás. Es un departamento pequeño, pero bien amueblado. Sin lujos, pero sin una sola carencia. Se encuentran en la cama de tamaño King Size en medio de la estancia, encima de un edredón azul. Se alcanza a ver la cocina en segundo plano. Un tostador y un extractor de jugos.</p>
         <p style="text-align: center;">ESCENA I</p>
@@ -79,6 +84,8 @@
         <p>Mariana, quién quedó sobre Mónica, coloca su sexo sobre el de su pareja y comienzan a realizar movimientos pélvicos a lo largo de dos minutos.</p>
         <p>La que estaba arriba se recuesta a un lado de la de abajo y comienzan a masturbarse la una a la otra.</p>
         <p>Parece faltarles el aire, pero no se ven intenciones algunas de cesar con el acontecimiento. Mónica se sube literalmente en Mariana y se repiten los movimientos pélvicos. Después de dos gritos (uno de cada una, pero que se confunden por la uniformidad del tiempo en el orgasmo.)</p>
+   <p id="acto3">tercer acto</p>
+
         <p align="center">ACTO TERCERO</p>
         <p>El baño del departamento de Mónica. Un baño muy bien amueblado y con acabados lujosos. La puerta está del lado izquierdo. Azulejos de color amarillo pastel con figurillas que se engarzan entre sí. El lavamanos tiene dos puertas en la parte inferior, un espejo encima que toca el techo, al lado derecho un retrete y a la diestra de este se encuentra la tina de hidromasaje. Tres cuadros decorativos. Jabones de colores y una maceta.</p>
         <p align="center">ESCENA I</p>
@@ -108,6 +115,8 @@
         <p><strong>Roberto:</strong> ¿En dónde siempre?</p>
         <p><strong>Mónica: </strong>Porqué no.</p>
         <p><strong>Roberto: </strong>Ha! Por cierto, espero que no se haya descompuesto la contestadora. Porque ahorita que pasé por la sala estaba grabando.</p>
+         <p id="fin">fin</p>
+
         <p align="center">FIN </p>
         <div class="apa">
             <p><strong>Citado APA: </strong> (A. 2010,07. Ejemplo de Guión obra de teatro. Revista Ejemplode.com. Obtenido 07, 2010, de https://www.ejemplode.com/11-escritos/1198-ejemplo_de_guion_obra_de_teatro.html)</p>
