--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    Hello world :v
+    Hello world
+    <p>hello</p>
+    <a href="activitats.html">activitats</a>
+    <h1>Activitats</h1>
+    <h2>formato</h2>
+    <a href="html/02_formato/act1.html">Activitat 1</a><br/>
+    <a href="html/02_formato/act2.html">Activitat 2</a><br/>
+    <a href="html/02_formato/act3.html">Activitat 3</a><br/>
+    <a href="html/02_formato/act4.html">Activitat 4</a><br/>
+    <a href="html/02_formato/act5.html">Activitat 5</a><br/>
+    <a href="html/02_formato/act6.html">Activitat 6</a><br/>
+    <a href="html/02_formato/act7.html">Activitat 7</a><br/>
+    <h2>hipervincles</h2>
+    <a href="html/03_hipervincles/act1.html">Activitat 1</a><br/>
+    <a href="html/03_hipervincles/act2.html">Activitat 2</a><br/>
+    <a href="html/03_hipervincles/act3.html">Activitat 3</a><br/>
+    <h2>listas</h2>
+    <a href="html/04_listas/act1.html">Activitat 1</a><br/>
+    <a href="html/04_listas/act2.html">Activitat 2</a><br/>
+    <a href="html/04_listas/act3.html">Activitat 3</a><br/>
+    <a href="html/04_listas/act4.html">Activitat 4</a><br/>
+    <a href="html/04_listas/act5.html">Activitat 5</a><br/>
 </body>
 </html>
