--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
     <a href="html/04_listas/act3.html">Activitat 3</a><br/>
     <a href="html/04_listas/act4.html">Activitat 4</a><br/>
     <a href="html/04_listas/act5.html">Activitat 5</a><br/>
+    <h2>imagenes</h2>
+    <a href="html/05_imagenes/act1.html">Activitat 1</a><br/>
+    
 </body>
 </html>
