--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    Hello world
-    <p>hello</p>
+    ACTIVITATS HTML SMX1
+    <p>JAVIER MOYA</p>
     <a href="activitats.html">activitats</a>
     <h1>Activitats</h1>
     <h2>formato</h2>
@@ -30,6 +30,7 @@
     <a href="html/04_listas/act5.html">Activitat 5</a><br/>
     <h2>imagenes</h2>
     <a href="html/05_imagenes/act1.html">Activitat 1</a><br/>
+    <a href="html/05_imagenes/act2.html">Activitat 2<a><br/>
 
 </body>
 </html>
