--- a/html/05_imagenes/act2.html
+++ b/html/05_imagenes/act2.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
-</body>
-</html></p>
+    <h1>Redes sociales</h1>
+ 
+    <figure>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQnULcBfSqH9C3ooVVkPDA9rxRyqHoR3M1ng&s" width="100"/>
+    </figure>
+ <figure>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3q2Et2b8f8s0MRh3inp-UwoFzqXGBnJV9Bw&s" width="100"/>
+    </figure>
+ <figure>
+        <img src="https://w7.pngwing.com/pngs/680/46/png-transparent-youtube-logo-computer-icons-youtube-logo-youtube-television-text-sign.png" width="100"/>
+    </figure>
