--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <h2>imagenes</h2>
     <a href="html/05_imagenes/act1.html">Activitat 1</a><br/>
     <a href="html/05_imagenes/act2.html">Activitat 2<a><br/>
-
+    <a href="html/05_imagenes/act3.html">Activitat 3<a><br/>
+    <a href="html/05_imagenes/act4.html">Activitat 4<a><br/>
 </body>
 </html>
