--- a/html/06_tablas/act1.html
+++ b/html/06_tablas/act1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="1">
+    <table
     <caption>Mi tabla</caption>
         <tr>
             <td scope="col">Portada</td>
