--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
     <a href="html/05_imagenes/act2.html">Activitat 2<a><br/>
     <a href="html/05_imagenes/act3.html">Activitat 3<a><br/>
     <a href="html/05_imagenes/act4.html">Activitat 4<a><br/>
+    <h2>tablas</h2>   
+    <a href="html/06_tablas/act1.html">Activitat 6<a><br/>
+    <a href="html/06_tablas/act2.html">Activitat 6<a><br/>
 </body>
 </html>
