--- a/html/06_tablas/act2.html
+++ b/html/06_tablas/act2.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <table>
+  <table border="1">
     <caption>Lista de Mis Peores Enemigos</caption>
     <tr>
         <th>Nombre</th>
         <th>Apellidos</th>
         <th>Edad</th>
         <th>Género</th>
-        <th>¿Por qué es mi enemigo?</th>
+        <th>Por qué es mi enemigo</th>
     </tr>
     <tr>
         <td>pilar</td>
