--- a/html/06_tablas/act3.html
+++ b/html/06_tablas/act3.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+ <table border="1">
+    <caption>Curriculum Vitae</caption>
+    <br>
+    <tr>
+        <th>Imagen</th>
+        <th>Datos básicos.</th>
+        <th>Experiencia</th>
+        <th>Género</th>
+        <th>Habilidades</th>
+    </tr>
+   </br>
+</table>
+
 </body>
 </html></p>
