--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <body>
     ACTIVITATS HTML SMX1
     <p>JAVIER MOYA</p>
-    <a href="activitats.html">activitats</a>
     <h1>Activitats</h1>
     <h2>formato</h2>
     <a href="html/02_formato/act1.html">Activitat 1</a><br/>
@@ -37,5 +36,10 @@
     <a href="html/06_tablas/act1.html">Activitat 1<a><br/>
     <a href="html/06_tablas/act2.html">Activitat 2<a><br/>
     <a href="html/06_tablas/act3.html">Activitat 3<a><br/>
+    <h2>formularios</h2>
+    <a href="html/07_formularios/act1.html">Activitat 1<a><br/>
+    <a href="html/07_formularios/act2.html">Activitat 2<a><br/>
+    <a href="html/07_formularios/act3.html">Activitat 3<a><br/>
+    <a href="html/07_formularios/act4.html">Activitat 4<a><br/>
 </body>
 </html>
