--- a/html/08_multimedia/act1.html
+++ b/html/08_multimedia/act1.html
@@ -1,21 +1,49 @@
-<p><!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ca">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Els meus Podcasts</title>
+    
 </head>
 <body>
-<figure>
-    <figcaption>T-Rex:</figcaption>
-    <audio
-        controls
-        src="t-rex.mp3"
-      >
-      <p>
-          Su navegador no soporta el formato del audio, pulse <a href="t-rex.mp3">aquí</a> para descargarlo.
-      </p>
-    </audio>
-</figure>
+
+    <h1>Últims Episodis dels meus Podcasts</h1>
+
+
+    <div class="podcast">
+        <div class="info">
+            <img src="logo1.png" alt="Logo Podcast 1">
+            <h2>Podcast 1 — Episodi 12</h2>
+        </div>
+        <audio controls>
+            <source src="podcast1-episodi12.mp3" type="audio/mpeg">
+            El teu navegador no suporta l'element d'àudio.
+        </audio>
+    </div>
+
+   
+    <div class="podcast">
+        <div class="info">
+            <img src="logo2.png" alt="Logo Podcast 2">
+            <h2>Podcast 2 — Episodi 8</h2>
+        </div>
+        <audio controls>
+            <source src="podcast2-episodi8.mp3" type="audio/mpeg">
+            El teu navegador no suporta l'element d'àudio.
+        </audio>
+    </div>
+
+    <div class="podcast">
+        <div class="info">
+            <img src="logo3.png" alt="Logo Podcast 3">
+            <h2>Podcast 3 — Episodi 24</h2>
+        </div>
+        <audio controls>
+            <source src="podcast3-episodi24.mp3" type="audio/mpeg">
+            El teu navegador no suporta l'element d'àudio.
+        </audio>
+    </div>
+
 </body>
-</html></p>
+</html>
