--- a/html/09_contenido/act1.html
+++ b/html/09_contenido/act1.html
@@ -1,74 +1,62 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Diario Digital</title>
+</head>
+
 <body>
 
   <header>
-    <nav>
-      <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Secciones</a></li>
-        <li><a href="#">Contacto</a></li>
-      </ul>
-    </nav>
     <h1>Diario Digital</h1>
+    <nav>
+      <a href="#">Inicio</a>
+      <a href="#">Secciones</a>
+      <a href="#">Contacto</a>
+    </nav>
   </header>
 
   <section>
     <h2>Artículo del día</h2>
 
     <article>
-      <header>
-        <h3>Título del artículo: La tecnología del futuro</h3>
-        <p>Autor: Juan Martínez</p>
-        <p>Fecha de publicación: 1 de diciembre de 2025</p>
-      </header>
+      <h3>La tecnología del futuro</h3>
+      <p><strong>Autor:</strong> Juan Martínez</p>
+      <p><strong>Fecha:</strong> 1 de diciembre de 2025</p>
 
       <p>
-        La tecnología sigue avanzando a un ritmo nunca antes visto. Desde la inteligencia artificial 
-        hasta los vehículos autónomos, el mundo se transforma a una velocidad increíble.
-        Este artículo analiza los avances más recientes y cómo afectarán nuestra vida diaria.
+        La tecnología progresa a gran velocidad. Innovaciones como la inteligencia
+        artificial y los vehículos autónomos están transformando el mundo.
       </p>
 
       <p>
-        Expertos aseguran que en los próximos diez años presenciaremos cambios tan profundos 
-        que redefinirán la forma en que trabajamos, aprendemos y nos comunicamos. 
-        La integración entre humanos y máquinas será cada vez más estrecha.
+        Expertos aseguran que en los próximos diez años presenciaremos cambios
+        profundos que redefinirán la forma en que trabajamos, aprendemos y nos
+        comunicamos.
       </p>
 
-      <aside>
-        <p><strong>Nota del autor:</strong> Este artículo forma parte de la serie "Mundo Futuro".</p>
-      </aside>
+      <p><em>Nota del autor: Este artículo forma parte de la serie "Mundo Futuro".</em></p>
     </article>
-
   </section>
 
-  <!-- Sección de comentarios -->
-  <section class="comentarios">
-
-    <aside>
-      Recuerda que para comentar debes iniciar sesión o registrarte en 
-      <a href="registro.html">registro</a>.
-    </aside>
-
-    <h1>Comentarios</h1>
 
     <article>
-      <h2>Ana López</h2>
+      <h3>Ana López</h3>
       <p>Muy interesante. Me preocupa cómo afectará esto al empleo.</p>
     </article>
 
     <article>
-      <h2>Carlos Ruiz</h2>
+      <h3>Carlos Ruiz</h3>
       <p>Creo que la tecnología traerá más beneficios que problemas.</p>
     </article>
 
     <article>
-      <h2>Lucía Fernández</h2>
+      <h3>Lucía Fernández</h3>
       <p>¡Gran artículo! Espero más entregas de esta serie.</p>
     </article>
 
   </section>
 
-  <footer>
-    Copyright © 2025 – Diario Digital
-  </footer>
-
 </body>
+</html>
