--- a/html/08_multimedia/act1.html
+++ b/html/08_multimedia/act1.html
@@ -1,11 +1,8 @@
-<p><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h2>multimedia</h2> 
-</body>
-</html>>
+<details>
+    <summary>Factura</summary>
+    <ul>
+        <li>Vino blanco: 12€</li>
+        <li>Aceitunas: 3€</li>
+    </ul>
+    <p>Total: 15€</p>
+</details>
