--- a/index.html
+++ b/index.html
@@ -45,5 +45,7 @@
     <h2>contenido</h2>
     <a href="html/09_contenido/act1.html">Activitat 1<a><br/>
     <a href="html/09_contenido/act2.html">Activitat 1<a><br/>
+    <h2>interactivos</h2>
+    
 </body>
 </html>
