--- a/index.html
+++ b/index.html
@@ -42,10 +42,17 @@
     <a href="html/07_formularios/act3.html">Activitat 3<a><br/>
     <a href="html/07_formularios/act4.html">Activitat 4<a><br/>
     <h2>multimedia</h2>
+
+
+
+    
     <h2>contenido</h2>
     <a href="html/09_contenido/act1.html">Activitat 1<a><br/>
     <a href="html/09_contenido/act2.html">Activitat 1<a><br/>
     <h2>interactivos</h2>
-    
+    <a href="html/11_interactivos/act1.html">Activitat 1<a><br/>
+    <a href="html/11_interactivos/act2.html">Activitat 2<a><br/>
+    <a href="html/11_interactivos/act3.html">Activitat 3<a><br/>
+    <a href="html/11_interactivos/act4.html">Activitat 4<a><br/>
 </body>
 </html>
