--- a/css/03_selectores/act1.html
+++ b/css/03_selectores/act1.html
@@ -7,10 +7,11 @@
   <link rel="stylesheet" type="text/css" href="act1.css">
 </head>
 <body>
-    <h1>Manzana</h1>
-    <h1>pera</h1>
-    <h3>banana</h3>
-    <h4>limon</h4>
-    <h5>fresa</h5>
+<p class="rojo">Manzana</p>
+<p class="verde">Pera</p>
+<p class="amarillo">Banana</p>
+<p class="verde-oscuro">Limón</p>
+<p class="rojo">Fresa</p>
+
 </body>
 </html>
