--- a/css/03_selectores/act3.html
+++ b/css/03_selectores/act3.html
@@ -7,6 +7,9 @@
      <link rel="stylesheet" type="text/css" href="act3.css">
 </head>
 <body>
-    
+    <p class="mercurio">Lorem ipsum</p>
+    <p class="venus">Lorem ipsum</p>
+    <p id="jupiter" class="marte">Lorem ipsum</p>
+    <p id="pluton" class="venus plu marte">Lorem ipsum</p>
 </body>
 </html></p>
