--- a/css/04_variables/act1.html
+++ b/css/04_variables/act1.html
@@ -1,11 +1,24 @@
-<p><!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejemplo con variable de color</title>
+    <style>
+    
+    </style>
 </head>
 <body>
-     <link rel="stylesheet" type="text/css" href="act1.css">
+<link rel="stylesheet" type="text/css" href="act1.css">
+  
+<h1>Mi página  ejemplo</h1>
+
+    <p>
+        Puedes visitar 
+        <a href="https://www.google.com">Google</a>, 
+        <a href="https://www.wikipedia.org">Wikipedia</a> 
+        <a href="https://www.Instagram.com">Instagram</a> 
+  
+    </p>
+
 </body>
-</html></p>
+</html>
