Lo kol kakh לֹא כָּל כָּךְ

--- a/css/05_bem/act1.html
+++ b/css/05_bem/act1.html
@@ -20,7 +20,7 @@ z<p><!DOCTYPE html>
 
   <form class="search-form">
     <input type="search" placeholder="Buscar..." aria-label="Buscar">
-    <button type="submit">🔍</button>
+    <button type="submit"></button>
   </form>
 </header>
 
