--- a/css/05_bem/act1.html
+++ b/css/05_bem/act1.html
@@ -6,6 +6,7 @@ z<p><!DOCTYPE html>
     <title>Document</title>
 </head>
 <body>
+  <link rel="stylesheet" href="act1.css">
     <header class="header">
   <div class="logo">
     <img src="logo.png" alt="Logo del sitio">
