--- a/css/05_bem/act2.html
+++ b/css/05_bem/act2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sistema de Comentarios</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="act2.css">
 </head>
 <body>
 
