--- a/portafolio website/index.html
+++ b/portafolio website/index.html
@@ -33,9 +33,10 @@
         <a href="#"><i class="fab fa-linkedin-in"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
       </div>
-      
+      <a href="#contacto" class="btn">contactame</a>
       <div class="hero-image">
-        <img src="https://en.meming.world/images/en/5/5e/Bald_Guy_Staring.jpg" alt="profile image">
+        <img src="https://img.freepik.com/vector-gratis/hacker-que-opera-ilustracion-icono-historieta-ordenador-portatil-concepto-icono-tecnologia-aislado-estilo-dibujos-animados-plana_138676-2387.jpg?semt=ais_user_personalization&w=740&q=80
+        " alt="profile image">
       </div>
    </section>
 
@@ -83,7 +84,16 @@
     </div>
     </div>
   </section>
-
    </main>
-</body>
+  <footer>
+    <div class="footer-content ">
+    <p>&copy; 2025 Javier Moya - todos los derechos reservados</p>
+    <div class="social-links">
+      <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+    </div>
+    </div>
+  </footer>
+  </body>
 </html>
